# AetherGrid-Sovereign

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  claims_sheet.yaml  docker-compose.yml  manuscript.txt  pyproject.toml  pytest.ini  requirements.txt  run_prompt5_smoke.py  run_prompt6_smoke.py
artifacts/: experiment_registry_export.json  openapi.json  prompt_03_handoff.json  prompt_04_handoff.json  prompt_05_handoff.json  prompt_06_handoff.json  prompt_07_handoff.json  prompt_08_handoff.json
backend/: Dockerfile
configs/: datasets.yaml  default_config.yaml  experiment.yaml  nas_search_space.yaml  prometheus.yml
core/: __init__.py  cv_hgt_conv.py  cv_pfa_attention.py  fuzzy_state.py  graph_constructor.py  hgt_conv.py  hgt_model.py  logging.py  model_registry.py  phase_generator.py  schema.py
data/: __init__.py  data_lineage.md  dataset_loaders.py  metadata.db  preprocessing.py  toy_dataset.py  toy_graph.json
docs/: architecture_diagram.md  current_state_audit.md  method_note.md
experiments/: expressivity.py  matrix.py  noise_sensitivity.py  run_nas.py  test_aethergrid.py  train.py
legacy/: fuzzy_attention.py  quantum_fuzzy_fusion.py  test_pl.py
logs/: audit.jsonl
optimization/: __init__.py  chaotic_maps.py  nas_search.py  q_avoa.py
profiling/: benchmark.py  benchmark_vqc.py
runs/: run_1784559202707_42_1d4092.json  run_1784559227873_42_1d4092.json  run_1784559271212_42_1d4092.json  run_1784559287914_42_85a502.json  run_1784559311913_42_1d4092.json  run_1784559324847_42_85a502.json  run_1784559365097_42_85a502.json  run_1784559365220_101_85a502.json  run_1784559365295_2026_85a502.json  run_1784559365415_42_85a502.json  run_1784559365487_101_85a502.json  run_1784559365564_2026_85a502.json  run_1784559365651_42_85a502.json  run_1784559365743_101_85a502.json  (+209 more)
ui/: streamlit_app.py
(+99 files in other folders)
